--- a/index.html
+++ b/index.html
@@ -52,6 +52,17 @@ a:active {
 	</style>
 </head>
 <body>
+
+<h1 style="text-align:center;">Презентация "БИОГРАФИЯ ПЛАВТА"</h1>
+<table style="margin: 0 auto">
+	<tr>
+		<td><p>>></p></td>
+		<td><a href="plavt.pptx">Скачать</a></td>
+		<td><p><<</p></td>
+	</tr>
+</table>
+	
+<hr>
 	
 <h1 style="text-align: center;">Презентация "Один день из жизни дворянина"</h1>
 <table style="margin: 0 auto">
