--- a/index.html
+++ b/index.html
@@ -53,6 +53,15 @@ a:active {
 </head>
 <body>
 
+<h1></h1>
+<table style="margin: 0 auto;">
+	<tr>
+		<td><p>>></p></td>
+		<td><a href="bumasniye-dengi-v-ru.pptx">Скачать</a></td>
+		<td><p><<</p></td>
+	</tr>	
+</table>
+	
 <h1 style="text-align:center;">Презентация "БИОГРАФИЯ ПЛАВТА"</h1>
 <table style="margin: 0 auto">
 	<tr>
