--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ a:active {
 </head>
 <body>
 
-<h1></h1>
+<h1>Бумажные деньги в России</h1>
 <table style="margin: 0 auto;">
 	<tr>
 		<td><p>>></p></td>
