--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ a:active {
 </head>
 <body>
 
-<h1>Бумажные деньги в России</h1>
+<h1>Презентация "Бумажные деньги в России"</h1>
 <table style="margin: 0 auto;">
 	<tr>
 		<td><p>>></p></td>
