--- a/index.html
+++ b/index.html
@@ -53,32 +53,12 @@ a:active {
 	</style>
 </head>
 <body>
-
-<h1>Презентация "Бумажные деньги в России"</h1>
-<table style="margin: 0 auto;">
-	<tr>
-		<td><p>>></p></td>
-		<td><a href="bumasniye-dengi-v-ru.pptx">Скачать</a></td>
-		<td><p><<</p></td>
-	</tr>	
-</table>
 	
-<h1 style="text-align:center;">Презентация "БИОГРАФИЯ ПЛАВТА"</h1>
+<h1 style="text-align: center;">Презентация "Система образования в ЮАР"</h1>
 <table style="margin: 0 auto">
 	<tr>
 		<td><p>>></p></td>
-		<td><a href="plavt.pptx">Скачать</a></td>
-		<td><p><<</p></td>
-	</tr>
-</table>
-	
-<hr>
-	
-<h1 style="text-align: center;">Презентация "Один день из жизни дворянина"</h1>
-<table style="margin: 0 auto">
-	<tr>
-		<td><p>>></p></td>
-		<td><a href="presentation.pptx">Скачать</a></td>
+		<td><a href="obrasovaniye-v-sa.pptx">Скачать</a></td>
 		<td><p><<</p></td>
 	</tr>
 </table>
