--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@ a:active {
 </head>
 <body>
 	
-<h1 style="text-align: center;">Презентация "История развития воздушного транспорта"</h1>
+<h1 style="text-align: center;">Презентация "Академия Наук"</h1>
 <table style="margin: 0 auto">
 	<tr>
 		<td><p>>></p></td>
-		<td><a href="история_развития_мирового_воздушного_транспорта.pptx">Скачать</a></td>
+		<td><a href="Академия_Наук.pptx">Скачать</a></td>
 		<td><p><<</p></td>
 	</tr>
 </table>
